# Foveated-YOLT

./: .gitignore  CMakeList.txt~  CMakeLists.txt  CMakeLists.txt~  README.md  main.c~  makefile  makefile~  thesis_functions.py
cmake/Modules/: FindCaffe.cmake  FindCaffe.cmake~
code/: thesis.py
files/: deploy_alexnet.prototxt  deploy_googlenet.prototxt  deploy_vggnet.prototxt
scripts/: run_detector.sh  setup.sh
src/: deploy_caffenet.prototxt  derived_classes.cpp  main.cpp  main.cpp~  main.c~  multiple_derived_classes.cpp  thesis.cpp  thesis.py  thesis_functions.py  volume_box.cpp
